--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -15,4 +15,4 @@ block content
     h1= title
     p.lead
       | Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-    a.btn.btn-large.btn-success(href='#') Login with Instagram
+    a.btn.btn-large.btn-success(href='/authorize_user') Login with Instagram
