--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -12,6 +12,7 @@ html(lang='en')
         script(src='http://localhost:35729/livereload.js')
         script(src='/components/jquery/dist/jquery.js')
         script(src='/components/bootstrap/dist/js/bootstrap.js')
+        script(src='/js/scripts.js')
   body
     .container-narrow
       block content
