reading from db

--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -7,6 +7,9 @@ html(lang='en')
     block css
       link(rel='stylesheet', href='/css/style.css')
       link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap.css')
+      link(href='http://netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css', rel='stylesheet')
+      link(href='https://fonts.googleapis.com/css?family=Arima+Madurai:100,200,300,400,500,700,800,900', rel='stylesheet')
+      script(src='https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js')
     block js
       if ENV_DEVELOPMENT
         script(src='http://localhost:35729/livereload.js')
