--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,18 +1,7 @@
 extends layout
 
 block content
-  .masthead
-      ul.nav.nav-pills.pull-right
-        li.active
-          a(href='#') Home
-        li
-          a(href='#') About
-        li
-          a(href='#') Contact
-      h3.muted= title
-  hr
+  video#background(autoplay='', loop='', muted='', poster='screenshot.jpg')
+    source(src='/bgmovie.mp4', type='video/mp4')
   .jumbotron
-    h1= title
-    p.lead
-      | Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-    a.btn.btn-large.btn-success(href='/authorize_user') Login with Instagram
+    a.btn.btn-large.btn-danger(href='/authorize_user') Login with Instagram
