--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -2,21 +2,22 @@ doctype html
 html(lang='en')
   head
     meta(charset='UTF-8')
-    meta(name='viewport', content='width=device-width')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
     block css
       link(rel='stylesheet', href='/css/style.css')
+      //- materialize css
+      link(rel='stylesheet', href="http://fonts.googleapis.com/icon?family=Material+Icons")
+      link(rel='stylesheet', href='/components/materialize/dist/css/materialize.min.css')
       link(rel='stylesheet', href='/css/card.css')
-      link(rel='stylesheet', href='/components/bootstrap/dist/css/bootstrap.css')
-      link(href='http://netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css', rel='stylesheet')
       link(href='https://fonts.googleapis.com/css?family=Arima+Madurai:100,200,300,400,500,700,800,900', rel='stylesheet')
       script(src='https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js')
     block js
       if ENV_DEVELOPMENT
         script(src='http://localhost:35729/livereload.js')
-        script(src='/components/jquery/dist/jquery.js')
-        script(src='/components/bootstrap/dist/js/bootstrap.js')
-        script(src='/js/scripts.js')
   body
     .container
       block content
+    script(src='/components/jquery/dist/jquery.js')
+    script(src='/components/materialize/dist/js/materialize.min.js')
+    script(src='/js/scripts.js')
