--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -6,6 +6,8 @@ block content
   .row.center
     .col.s12
       .jumbotron
+        p An Exclusive Network for 
+          span Nomad Couples
         a.waves-effect.waves-light.waves-purple.deep-purple.accent-4.btn-large.z-depth-5(href='/authorize_user')
           i.material-icons.right stars
           | Login with Instagram
