--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,17 @@ body {
   transform: translateX(-50%) translateY(-50%);
   background-size: cover;
 }
+.container nav ul li a {
+  color: black !important;
+}
 .jumbotron {
   margin-top: 200px;
+  color: white;
+}
+.jumbotron p {
+  font-weight: 200;
+  font-size: 3em;
+}
+.jumbotron p span {
+  font-weight: 500;
 }
