--- a/public/css/style.less
+++ b/public/css/style.less
@@ -1,22 +1,42 @@
 body {
-padding-top: 20px;
-padding-bottom: 40px;
+  padding-top: 20px;
+  padding-bottom: 40px;
 }
 
 #background {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -100;
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-    background-size: cover;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  background-size: cover;
+}
+
+.container {
+  nav {
+    ul {
+      li {
+        a {
+          color: black !important;
+        }
+      }
+    }
+  }
 }
 
 .jumbotron {
   margin-top: 200px;
+  color: white;
+  p {
+    font-weight: 200;
+    font-size: 3em;
+    span {
+      font-weight: 500;
+    }
+  }
 }
