--- a/app/views/dashboard.jade
+++ b/app/views/dashboard.jade
@@ -25,23 +25,26 @@ block content
             | Find By Location
             i.material-icons.right arrow_drop_down
   .row
+    .col.s12
+      p= user
+  .row
     .col.s12.m8
       .card.horizontal.transparent
         .card-image
-          img(src='#{user.meta.iPicture}')
+          img(src='#{user.meta.picture}')
         .card-stacked
           .card-content
             span.card-title.activator.grey-text.text-darken-4
-              | #{user.iName}
+              | #{user.userName}
             .chip
-              | #{ user.iDisplayName }
+              | #{ user.fullName }
             .chip
               | #{ user.meta.homeBase }
             .chip
               | #{ user.meta.currentLocation }
-            p= user.meta.iBio
+            p= user.meta.bio
             br
-            p following: #{user.meta.iFollows} | followers: #{user.meta.iFollowedBy}
+            p following: #{user.meta.follows} | followers: #{user.meta.followedBy}
           .card-action
             a(href='#{user.meta.website}', target="_blank") Website
             a(href='https://www.instagram.com/#{user.iName}', target="_blank") Instagram
