--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -18,5 +18,6 @@ html(lang='en')
         script(src='/components/jquery/dist/jquery.js')
   body
     .container
+      a(href="/logout") logout
       block content
     script(src='/components/materialize/dist/js/materialize.min.js')
