added route function to determine combined reach

--- a/app/views/dashboard.jade
+++ b/app/views/dashboard.jade
@@ -26,7 +26,7 @@ block content
             i.material-icons.right arrow_drop_down
   .row
     .col.s12
-      p= user
+      p Combined Reach: #{ reach }
   .row
     .col.s12.m8
       .card.horizontal.transparent
@@ -48,3 +48,4 @@ block content
           .card-action
             a(href='#{user.meta.website}', target="_blank") Website
             a(href='https://www.instagram.com/#{user.iName}', target="_blank") Instagram
+            a(href='/welcome') Edit Profile
