--- a/app/views/welcome.jade
+++ b/app/views/welcome.jade
@@ -4,13 +4,12 @@ block content
   .row
     .col.s12
       h4 Connect with other couples around the globe
-      p= user
   .row
     form(action="/submit", method="post").col.s12
       .row
         input(type='hidden', value="#{ user._id }", name='id')
         .input-field.col.s12.m6
-          input#email.validate(name='email', type='email', placeholder="email@domain.com", required)
+          input#email.validate(name='email', type='email', placeholder="email@domain.com", value="#{ user.email }" required)
           label(for='email') Email
         .input-field.col.s12.m6
           input#website(value="#{ user.meta.website }", name='website', type='text', placeholder="http://www.website.com/")
@@ -31,14 +30,14 @@ block content
           input#current_question(type='checkbox')
           label(for='current_question') Are you currently on a trip?
         .input-field.col.s12.m6
-          input#home_base.validate(name='home', placeholder='Portugal', type='text', disabled="disabled")
+          input#home_base.validate(value="#{ user.meta.homeBase }",name='home', placeholder='Portugal', type='text', disabled="disabled")
           label(for='home_base') Home Base (Country)
       .row
         .input-field.col.s12.m6
-          input#current_trip.validate(name='current', placeholder='Fiji', type='text', disabled='disabled')
+          input#current_trip.validate(value="#{ user.meta.currentLocation }", name='current', placeholder='Fiji', type='text', disabled='disabled')
           label(for='current_trip') Current Trip (Country)
         .input-field.col.s12.m6
-          input#next_trip.validate(name='next', placeholder='Iceland', type='text')
+          input#next_trip.validate(value="#{ user.meta.nextTrip }", name='next', placeholder='Iceland', type='text')
           label(for='next_trip') Next Trip (Country)
       .row
         button.btn.waves-effect.waves-light.btn-large.right(type='submit', action="post")
