--- a/public/css/style.less
+++ b/public/css/style.less
@@ -1,6 +1,15 @@
 body {
   padding-top: 20px;
   padding-bottom: 40px;
+  font-family: "Oswald", sans-serif;
+}
+
+#slack {  
+    background: url('../slack.jpg') no-repeat;
+    background-size: 100%;
+    background-position: right 0px top -70px;
+    text-shadow: horizontal-offset vertical-offset blur color;
+    text-shadow: 2px 4px 3px rgba(0,0,0,0.5);
 }
 
 #background {
