--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -2,20 +2,19 @@ doctype html
 html(lang='en')
   head
     meta(charset='UTF-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0, user-scalable=no')
     title= title
     block css
       link(rel='stylesheet', href='/css/style.css')
       //- materialize css
       link(rel='stylesheet', href="http://fonts.googleapis.com/icon?family=Material+Icons")
       link(rel='stylesheet', href='/components/materialize/dist/css/materialize.min.css')
-      link(href='https://fonts.googleapis.com/css?family=Arima+Madurai:100,200,300,400,500,700,800,900', rel='stylesheet')
+      link(href='https://fonts.googleapis.com/css?family=Oswald:100,200,300,400,500,700,800,900', rel='stylesheet')
     block js
       if ENV_DEVELOPMENT
         script(src='http://localhost:35729/livereload.js')
         script(src='/components/jquery/dist/jquery.js')
   body
     .container
-      a(href="/logout") logout
       block content
     script(src='/components/materialize/dist/js/materialize.min.js')
