added basic sorting client side lib

--- a/app/views/admin.jade
+++ b/app/views/admin.jade
@@ -5,27 +5,29 @@ block content
     h4 User Administration
   .row
     .col.s12
-      table.striped.responsive-table.centered
+      table.sortable.striped.responsive-table.centered
         thead
           tr
             th Instagram Name
             th Created Date
             th Home Base
             th Current Location
+            th Next Trip
             th Follows
             th Followed By
             th Admin
         tbody
           - for (var i = 0; i < users.length; ++i) {
             tr
-              td= users[i].iName
+              td= users[i].userName
               td= users[i].created_at
               td= users[i].meta.homeBase
               td= users[i].meta.currentLocation
-              td= users[i].meta.iFollows
-              td= users[i].meta.iFollowedBy
+              td= users[i].meta.nextTrip
+              td= users[i].meta.follows
+              td= users[i].meta.followedBy
               td
                 a.waves-effect.waves-light.red.accent-4.btn(href="/delete/#{ users[i]._id }")
                   i.material-icons.right delete
-                  | delete
+                  | del
           - }
