--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,8 @@ body {
 .jumbotron p {
   font-weight: 200;
   font-size: 3em;
+  text-shadow: horizontal-offset vertical-offset blur color;
+  text-shadow: 2px 4px 3px rgba(0, 0, 0, 0.5);
 }
 .jumbotron p span {
   font-weight: 500;
