--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -3,11 +3,18 @@ extends layout
 block content
   video#background(autoplay='', loop='', muted='', poster='screenshot.jpg')
     source(src='/bgmovie.mp4', type='video/mp4')
+  .row.right
+    .col.s12
+      #advertisers
+        a(href="") 
+          a.waves-effect.waves-light.waves-white.blue-grey.lighten-4.btn.z-depth-1.black-text(href='/brands') Are You a Brand? Advertise Here
+            i.material-icons.right trending_flat
   .row.center
     .col.s12
       .jumbotron
-        p An Exclusive Network for 
-          span Nomad Couples
+        p The Premiere Influencer Network for 
+          span Nomad Couples.
         a.waves-effect.waves-light.waves-purple.deep-purple.accent-4.btn-large.z-depth-5(href='/authorize_user')
           i.material-icons.right stars
-          | Login with Instagram
+          | Sign Up & Login with Instagram
+        p Score exclusive perks and savings from large hotel and travel brands.
