--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -14,6 +14,7 @@ html(lang='en')
       if ENV_DEVELOPMENT
         script(src='http://localhost:35729/livereload.js')
         script(src='/components/jquery/dist/jquery.js')
+        script(src='/js/sort.js')
   body
     .container
       block content
