--- a/public/css/style.less
+++ b/public/css/style.less
@@ -44,6 +44,8 @@ body {
   p {
     font-weight: 200;
     font-size: 3em;
+    text-shadow: horizontal-offset vertical-offset blur color;
+    text-shadow: 2px 4px 3px rgba(0,0,0,0.5);
     span {
       font-weight: 500;
     }
