--- a/public/css/style.less
+++ b/public/css/style.less
@@ -26,16 +26,9 @@ body {
   background-size: cover;
 }
 
-.container {
-  nav {
-    ul {
-      li {
-        a {
-          color: black !important;
-        }
-      }
-    }
-  }
+nav {
+  position: absolute;
+  top: 0;
 }
 
 .jumbotron {
