--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,8 +23,9 @@ body {
   transform: translateX(-50%) translateY(-50%);
   background-size: cover;
 }
-.container nav ul li a {
-  color: black !important;
+nav {
+  position: absolute;
+  top: 0;
 }
 .jumbotron {
   margin-top: 200px;
