--- a/public/css/style.less
+++ b/public/css/style.less
@@ -29,6 +29,12 @@ body {
 nav {
   position: absolute;
   top: 0;
+  .dropdown-content {
+    top: 65px !important;
+  }
+  .dropdown-content li>a, .dropdown-content li>span {
+    color: black;
+  }
 }
 
 .jumbotron {
