--- a/app/views/welcome.jade
+++ b/app/views/welcome.jade
@@ -3,44 +3,53 @@ extends layout
 block content
   .row
     .col.s12
-      h4 Connect with other couples around the globe
+    //- breathing room from nav
+    br
+    br
   .row
-    form(action="/submit", method="post").col.s12
-      .row
-        input(type='hidden', value="#{ user._id }", name='id')
-        .input-field.col.s12.m6
-          input#email.validate(name='email', type='email', placeholder="email@domain.com", value="#{ user.email }" required)
-          label(for='email') Email
-        .input-field.col.s12.m6
-          input#website(value="#{ user.meta.website }", name='website', type='text', placeholder="http://www.website.com/")
-          label(for='email') Website
-      .row
-        .input-field.col.s12
-          input#display_name.validate(value="#{ user.fullName }", name='displayName', placeholder='Nomad Couple', type='text', required)
-          label(for='display_name') Public Name
-      .row
-        .input-field.col.s12
-          input#bio.validate(value="#{ user.meta.bio }", name='bio', placeholder='Nomad Couple', type='text', data-length="240")
-          label(for='display_name') Account Description
-      .row
-        .col.s12.m6#checkboxes
-          input#homebase_question(type='checkbox')
-          label(for='homebase_question') Do you have a home base?
-          br
-          input#current_question(type='checkbox')
-          label(for='current_question') Are you currently on a trip?
-        .input-field.col.s12.m6
-          input#home_base.validate(value="#{ user.meta.homeBase }",name='home', placeholder='Portugal', type='text', disabled="disabled")
-          label(for='home_base') Home Base (Country)
-      .row
-        .input-field.col.s12.m6
-          input#current_trip.validate(value="#{ user.meta.currentLocation }", name='current', placeholder='Fiji', type='text', disabled='disabled')
-          label(for='current_trip') Current Trip (Country)
-        .input-field.col.s12.m6
-          input#next_trip.validate(value="#{ user.meta.nextTrip }", name='next', placeholder='Iceland', type='text')
-          label(for='next_trip') Next Trip (Country)
-      .row
-        button.btn.waves-effect.waves-light.btn-large.right(type='submit', action="post")
-          | Submit
-          i.material-icons.right done
+    .col.s12.m2.hide-on-small-and-down
+    .col.s12.m8
+      h4 Update Your Profile
+    .col.s12.m2.hide-on-small-and-down
+  .row
+    .col.s12.m2.hide-on-small-and-down
+    .col.s12.m8
+      form(action="/submit", method="post").col.s12
+        .row
+          input(type='hidden', value="#{ user._id }", name='id')
+          .input-field.col.s12.m6
+            input#email.validate(name='email', type='email', placeholder="email@domain.com", value="#{ user.email }" required)
+            label(for='email') Email
+          .input-field.col.s12.m6
+            input#website(value="#{ user.meta.website }", name='website', type='text', placeholder="http://www.website.com/")
+            label(for='email') Website
+        .row
+          .input-field.col.s12
+            input#display_name.validate(value="#{ user.fullName }", name='displayName', placeholder='Nomad Couple', type='text', required)
+            label(for='display_name') Public Name
+        .row
+          .input-field.col.s12
+            input#bio.validate(value="#{ user.meta.bio }", name='bio', placeholder='Nomad Couple', type='text', data-length="240")
+            label(for='display_name') Account Description
+        .row
+          .col.s12.m6#checkboxes
+            input#homebase_question(type='checkbox')
+            label(for='homebase_question') Do you have a home base?
+            br
+            input#current_question(type='checkbox')
+            label(for='current_question') Are you currently on a trip?
+          .input-field.col.s12.m6
+            input#home_base.validate(value="#{ user.meta.homeBase }",name='home', placeholder='Portugal', type='text', disabled="disabled")
+            label(for='home_base') Home Base (Country)
+        .row
+          .input-field.col.s12.m6
+            input#current_trip.validate(value="#{ user.meta.currentLocation }", name='current', placeholder='Fiji', type='text', disabled='disabled')
+            label(for='current_trip') Current Trip (Country)
+          .input-field.col.s12.m6
+            input#next_trip.validate(value="#{ user.meta.nextTrip }", name='next', placeholder='Iceland', type='text')
+            label(for='next_trip') Next Trip (Country)
+        .row
+          button.btn.deep-purple.accent-4.waves-effect.waves-light.btn-large.right(type='submit', action="post")
+            | Submit
+    .col.s12.m2.hide-on-small-and-down
   script(src='/js/welcome.js')
