--- a/app/views/dashboard.jade
+++ b/app/views/dashboard.jade
@@ -42,8 +42,18 @@ block content
           hr
           h5.grey-text.text-darken-2 Total Posts
       .row
+        //- breathing room
+      .row.hide-on-small-and-down
         .col.s12
-          h4.center Badges
+          a(href="https://nomadcouples.slack.com/", target="_blank")
+            #slack.card-panel.transparent.hoverable
+              h3.center.white-text Chat with other Nomad Couples on Slack!
+              .row
+                .col.s12
+                  h5.center.white-text sign up here!
+      .row
+        .col.s12
+          h5.center Badges
           .row
             .col.s4.m2.center
               i.large.material-icons.red-text grade
@@ -58,46 +68,3 @@ block content
             .col.s4.m2.center
               i.large.material-icons.purple-text.text-lighten-5 loyalty
     .col.s12.m2.hide-on-small-and-down
-  .row
-    .col.s12.m2.hide-on-small-and-down
-      //- empty columns
-    .col.s12.m8
-      .card-panel.transparent.z-depth-0
-        .card-content
-          h3.center.card-title
-            | Our Featured Couple
-        .card-image.center
-          img(src='#{user.meta.picture}')
-        .card-content.center
-          h5.card-title
-            |#{ user.userName }
-          p name: #{ user.fullName }
-          .chip
-            | Home Base: #{ user.meta.homeBase }
-          .chip
-            | Current Location: #{ user.meta.currentLocation }
-          p= user.meta.bio
-          p following: #{user.meta.follows} | followers: #{user.meta.followedBy}
-    .col.s12.m2.hide-on-small-and-down
-      //- empty columns
-  .row
-    //- breathing room from nav
-  .row.hide-on-small-and-down
-    .col.s12.m2.hide-on-small-and-down
-      //- empty columns
-    .col.s12.m8
-      a(href="https://nomadcouples.slack.com/", target="_blank")
-        #slack.card-panel.transparent.z-depth-5
-          h3.center.white-text Chat with other Nomad Couples on Slack!
-          .row
-            .col.s12
-              h5.center.white-text sign up here!
-    .col.s12.m2.hide-on-small-and-down
-      //- empty columns
-  //- .row
-  //-   .col.s12.m4
-  //-     img(src="http://placehold.it/300x250", width="100%", height="250px")
-  //-   .col.s12.m4
-  //-     img(src="http://placehold.it/300x250", width="100%", height="250px")
-  //-   .col.s12.m4
-  //-     img(src="http://placehold.it/300x250", width="100%", height="250px")
