--- a/app/views/templates/nav-loggedin.jade
+++ b/app/views/templates/nav-loggedin.jade
@@ -7,6 +7,8 @@
       a(href='/welcome') Edit Profile
     li.divider
     li
+      a(href='https://nomadcouples.slack.com/', target="_blank") Join Us on Slack
+    li
       a(href='#!') Support
   nav.deep-purple.accent-4
     .row
@@ -17,7 +19,7 @@
             li.hide-on-small-and-down
               a(href="/brands") For Brands
             li.hide-on-small-and-down
-              a(href="#") Find Other Couples
+              a(href="/explore") Explore
             li
               a.dropdown-button(href='#!', data-activates='dropdown1')
                 | Account Settings
